test_suite/alan-2022-examples/failing/003920_mutation.alan
source E3 begin leave(<= 064) end
